# puertocho-assistant-pi

./: .env.example  .gitignore  CLAUDE.md  CURSOR_REMOTE_WORKFLOW.md  PROJECT_TRACKER.md  README.md  STATUS_QUO.md  docker-compose.yml  package-lock.json  setup_remote_ssh.sh  toDo.md
checkpoints/: puertocho.onnx
docs/: Epic4.md  raspberry-pi-setup.md  setup.sh
puertocho-assistant-QML-view/: .gitignore  CMakeLists.txt  StatusCard.qml  SystemGauge.qml  main.cpp  resources.qrc
puertocho-assistant-backend/: .env.example  Dockerfile  Dockerfile.alternative  PROJECT_TRACKER.md  README.md  docker-compose.yml  requirements.txt
puertocho-assistant-hardware/: .env.example  .gitignore  Dockerfile  Dockerfile.alpine  Dockerfile.minimal  README.md  requirements.txt  setup_respeaker.sh  test_leds.py  toDo.md
puertocho-assistant-view/: README.md  build.sh  main.qml
puertocho-assistant-web-view/: Dockerfile  PROJECT_TRACKER.md  README.md  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json  supervisor-dev.conf  supervisor.conf  svelte.config.js  updateButtonConfig.js  vite.config.ts
scripts/: check_logs.sh  list_audio_device.py  setup-raspberry-pi.sh  test_pulseaudio.py
wake-word-openWakeWord-version/: .env  Dockerfile  INTEGRATION_SUCCESS.md  PROJECT_TRACKER.md  PUERTOCHO_INTEGRATION.md  README.md  commands.json  debug_puertocho.py  docker-compose.yml  env.example  puertocho_assistant.py  test_puertocho_model.py
wake-word-porcupine-version/: Dockerfile  README.md  README_REFACTORED.md  docker-compose.yml  env.example  instalar_asistente.py  migrate_to_modular.py  (+1 more)
~/.ssh/: config
(+183 files in other folders)
